# oxc-sourcemap

./: .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  HASHMAP_OPTIMIZATION.md  PERFORMANCE.md  README.md  build.rs  dprint.json  justfile
.github/workflows/: autofix.yml  benchmark.yml  ci.yml  copilot-setup-steps.yml  dprint.yml  release.yml  zizmor.yml
benches/: hashmap_optimization.rs  simple.rs
examples/: check_escaping.rs  escape_analysis.rs  escape_benchmark.rs  escape_microbench.rs  hashmap_optimization_demo.rs  profile_parse.rs  sourcemap_profile.rs  thread_safe_usage.rs
src/: chunk.rs  compressed_tokens.rs  concat_sourcemap_builder.rs  decode.rs  encode.rs  error.rs  lib.rs  napi.rs  owned_sourcemap.rs  soa_tokens.rs  sourcemap.rs  sourcemap_builder.rs  sourcemap_visualizer.rs  thread_safe.rs  token.rs
tests/: avx512_integration.rs  comprehensive_performance.rs  concat_sourcemap_builder.rs  lookup_token_approx.rs  main.rs  performance_baseline.rs  tc39_spec_tests.rs  thread_safety.rs
tests/fixtures_concat_sourcemap_builder/basic/: dep3.js
tests/fixtures_concat_sourcemap_builder/empty/: dep1.js  dep1.js.map  dep2.js  dep2.js.map  dep3.js.map
tests/snapshots/: concat_sourcemap_builder__empty.snap  main__invalid_token_position.snap
