[package]
name = "oxc_sourcemap"
version = "2.0.1"
publish = true
authors = ["Boshen <boshenc@gmail.com>"]
edition = "2021"
keywords = ["javascript", "sourcemap", "sourcemaps"]
description = "Basic sourcemap handling for Rust"
categories = []
readme = "README.md"
license = "MIT"
repository = "https://github.com/oxc-project/oxc-sourcemap"
rust-version = "1.76"
include = ["/src", "build.rs"]

# <https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html>
[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn" # Must be opt-in
print_stderr = "warn" # Must be opt-in
allow_attributes = "warn"
# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating by accident.
clone_on_ref_ptr = "warn"
# These two are mutually exclusive, I like `mod.rs` files for better fuzzy searches on module entries.
self_named_module_files = "warn" # "-Wclippy::mod_module_files"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
impl_trait_in_params = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"

[lib]
doctest = false
crate-type = ["lib", "cdylib"]

[dependencies]
base64-simd = "0.8"
cfg-if = "1.0.0"
cow-utils = "0.1.3"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rayon = { version = "1", optional = true }
napi = { version = "3.0.0-alpha", optional = true }
napi-derive = { version = "3.0.0-alpha" , optional = true }

[dev-dependencies]
insta = { version = "1.4.0", features = ["glob"] }

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = []
rayon = ["dep:rayon"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
